add login and registration (#1)